<resources>
    <string name="app_name">FirebaseAuthenticationApp</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_forgot_password">Forgot password</string>
    <string name="prompt_reset_password">Reset password</string>
    <string name="prompt_new_password">New password (If you want)</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_register">Register</string>
    <string name="action_update">Update user info</string>
    <string name="action_update_credentials">Update credentials</string>
    <string name="action_delete_user">Delete user</string>
    <string name="action_sign_out">Signout</string>
    <string name="action_back">Back</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_mismatch_password">This password is mismatch</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="messgae_signup_success">Sign up - Success</string>
    <string name="messgae_signup_fail">Sign up - Failure</string>

    <string name="messgae_login_success">Log in - Success</string>
    <string name="messgae_login_fail">Log in - Failure</string>
    <string name="message_forgot_password">Share your registered Email Id to sent you password reset instructions.</string>

</resources>
